generated-tests/tests/snapshots/tsx/tsx__test_generated_enum_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
enum TestEnum { A, B }

AST:
(program
  (enum_declaration
    (identifier TestEnum)
    (enum_body
      (property_identifier)
      (property_identifier)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
