generated-tests/tests/snapshots/tsx/tsx__test_generated_for_in_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
for (const key in obj) { console.log(key); }

AST:
(program
  (for_in_statement
    (identifier key)
    (identifier obj)
    (statement_block
      (expression_statement
        (call_expression
          (member_expression
            (identifier console)
            (property_identifier)
          )
          (arguments
            (identifier key)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
