generated-tests/tests/snapshots/tsx/tsx__test_generated_generic_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value10: Array<number> = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value10)
      (type_annotation
        (generic_type
          (type_identifier)
          (type_arguments
            (predefined_type)
          )
        )
      )
      (array
        (number)
        (number)
        (number)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value10",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value10",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 14,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
