generated-tests/tests/snapshots/tsx/tsx__test_generated_intersection_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value12: { a: number } & { b: string } = { a: 42, b: 'test' };

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value12)
      (type_annotation
        (intersection_type
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
          (object_type
            (property_signature
              (property_identifier)
              (type_annotation
                (predefined_type)
              )
            )
          )
        )
      )
      (object
        (pair
          (property_identifier)
          (number)
        )
        (pair
          (property_identifier)
          (string
            (string_fragment)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value12",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
